--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -7,3 +7,4 @@
   <label for="password">Password:</label>
   <input type="text" id="password" name="password">
   <input type="submit" value="submit">
+</form>
